[FOOIY-10] 네이버 지도

--- a/fooiy/ios/Podfile
+++ b/fooiy/ios/Podfile
@@ -26,6 +26,8 @@ target 'fooiy' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'NMapsMap','3.15.0'
+
   target 'fooiyTests' do
     inherit! :complete
     # Pods for testing
