--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.70.4",
     "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-nmap": "^0.0.66",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
   },
