--- a/fooiy/android/app/src/main/AndroidManifest.xml
+++ b/fooiy/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- 카메라 권한 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- 카메라 권한 -->
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -22,8 +26,11 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+      <!-- 네이버 지도 -->
       <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="slg5tzx3gv" />
+      <!-- 네이버 지도 -->
     </application>
 </manifest>
