--- a/fooiy/ios/Podfile
+++ b/fooiy/ios/Podfile
@@ -26,7 +26,7 @@ target 'fooiy' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  pod 'NMapsMap','3.15.0'
+  pod 'NMapsMap'
 
   target 'fooiyTests' do
     inherit! :complete
