--- a/fooiy/ios/fooiy/Info.plist
+++ b/fooiy/ios/fooiy/Info.plist
@@ -6,6 +6,11 @@
 	<key>NMFClientId</key>
     <string>slg5tzx3gv</string>
 	<!-- 네이버 지도 -->
+
+	<!-- 카메라 권한 -->
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your Camera.</string>
+	<!-- 카메라 권한 -->
 	
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
