--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -20,7 +20,8 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-nmap": "^0.0.66",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-vision-camera": "^2.15.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
