--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-bootsplash": "^4.3.2",
     "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-nmap": "^0.0.66",
