[FOOIY-17] Permission Camera

--- a/fooiy/ios/Podfile
+++ b/fooiy/ios/Podfile
@@ -28,6 +28,9 @@ target 'fooiy' do
 
   pod 'NMapsMap'
 
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+
   target 'fooiyTests' do
     inherit! :complete
     # Pods for testing
