--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -19,6 +19,7 @@
     "react-native-bootsplash": "^4.3.2",
     "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-modal": "^13.0.1",
     "react-native-nmap": "^0.0.66",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
