--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -16,13 +16,13 @@
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.4",
-    "react-native-bootsplash": "^4.3.2",
     "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-nmap": "^0.0.66",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vision-camera": "^2.15.2"
   },
   "devDependencies": {
