[FOOIY-24] 커스텀 앨범 라이브러리 도입

--- a/fooiy/android/app/src/main/AndroidManifest.xml
+++ b/fooiy/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- 카메라 권한 -->
 
+    <!-- 갤러리 권한 -->
+    <application android:requestLegacyExternalStorage="true">
+    <!-- 갤러리 권한 -->
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
