[FOOIY-20] Permission Gallery IOS

--- a/fooiy/ios/Podfile
+++ b/fooiy/ios/Podfile
@@ -30,6 +30,7 @@ target 'fooiy' do
 
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
 
   target 'fooiyTests' do
     inherit! :complete
