--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-dotenv": "^3.4.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-nmap": "^0.0.66",
