[FOOIY-21] Permission Location IOS

--- a/fooiy/ios/Podfile
+++ b/fooiy/ios/Podfile
@@ -31,6 +31,8 @@ target 'fooiy' do
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
+  pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
 
   target 'fooiyTests' do
     inherit! :complete
