--- a/fooiy/android/app/src/main/AndroidManifest.xml
+++ b/fooiy/android/app/src/main/AndroidManifest.xml
@@ -7,17 +7,14 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- 카메라 권한 -->
 
-    <!-- 갤러리 권한 -->
-    <application android:requestLegacyExternalStorage="true">
-    <!-- 갤러리 권한 -->
-
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:requestLegacyExternalStorage="true">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
