--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -20,6 +20,7 @@
     "react-native-dotenv": "^3.4.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-crop-tools": "^1.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-nmap": "^0.0.66",
     "react-native-permissions": "^3.6.1",
