--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -24,6 +24,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-nmap": "^0.0.66",
     "react-native-permissions": "^3.6.1",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-splash-screen": "^3.3.0",
