--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -7,10 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "pod": "cd ios && arch -x86_64 pod install && cd .."
   },
   "dependencies": {
     "@react-native-camera-roll/camera-roll": "^5.1.0",
+    "@react-native-community/geolocation": "^3.0.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
