--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-dotenv": "^3.4.2",
@@ -31,7 +33,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-vision-camera": "^2.15.2"
+    "react-native-vision-camera": "^2.15.2",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
