--- a/fooiy/android/app/src/main/AndroidManifest.xml
+++ b/fooiy/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,15 @@
     <!-- 카메라 권한 -->
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- 카메라 권한 -->
+    
+    <!-- 갤러리 권한 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 갤러리 권한 -->
+    
+    <!-- 위치 권한 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
+    <!-- 위치 권한 -->
 
     <application
       android:name=".MainApplication"
