--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -33,6 +33,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.6.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-vision-camera": "^2.15.2",
     "react-redux": "^8.0.5"
   },
