--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -20,6 +20,8 @@
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-dotenv": "^3.4.2",
