--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -8,12 +8,12 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
+    "gradle": "cd android && bash gradlew clean && cd .. && react-native run-android",
     "pod": "cd ios && arch -x86_64 pod install && cd .."
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-camera-roll/camera-roll": "^5.1.0",
-    "@react-native-community/geolocation": "^3.0.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
@@ -26,6 +26,7 @@
     "react-native": "0.70.4",
     "react-native-dotenv": "^3.4.2",
     "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-tools": "^1.6.2",
     "react-native-modal": "^13.0.1",
