--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-camera-roll/camera-roll": "^5.1.0",
+    "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
