device_id, Authorization 자동으로 받기

--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -26,6 +26,7 @@
     "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.2",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
