--- a/fooiy/android/app/build.gradle
+++ b/fooiy/android/app/build.gradle
@@ -257,6 +257,8 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    
+    implementation "com.kakao.sdk:v2-share:2.11.1" // 메시지(카카오톡 공유)
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
