--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -33,6 +33,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-tools": "^1.6.2",
+    "react-native-kakao-share-link": "^1.0.6",
     "react-native-modal": "^13.0.1",
     "react-native-nmap": "^0.0.66",
     "react-native-permissions": "^3.6.1",
