--- a/fooiy/android/app/src/main/AndroidManifest.xml
+++ b/fooiy/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
+      android:allowBackup="true"
       android:theme="@style/AppTheme"
       android:requestLegacyExternalStorage="true">
       <activity
@@ -45,8 +45,8 @@
             <category android:name="android.intent.category.BROWSABLE" />
 
             <!-- Redirect URI: "kakao{NATIVE_APP_KEY}://oauth“ -->
-            <data android:host="oauth"
-                android:scheme="kakaoadeeb3a64a0ef610048dbcbe1010c07f" />
+            <data android:host="oauth" android:scheme="kakaoadeeb3a64a0ef610048dbcbe1010c07f" />
+            <data android:host="kakaolink" android:scheme="kakaoadeeb3a64a0ef610048dbcbe1010c07f" />
         </intent-filter>
       </activity>
 
