[FOOIY-65] 마이페이지 닉네임 변경, 문의함

--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -15,6 +15,7 @@
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.1.0",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -27,6 +28,7 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-dotenv": "^3.4.2",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
