--- a/fooiy/ios/fooiy/Info.plist
+++ b/fooiy/ios/fooiy/Info.plist
@@ -25,6 +25,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>kakaoadeeb3a64a0ef610048dbcbe1010c07f</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>kakaoadeeb3a64a0ef610048dbcbe1010c07f</string>
@@ -61,6 +63,11 @@
 	<string>원활한 앱 사용을 위해 위치 권한을 허용해주세요.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>카메라 사용 권한은 이미지 촬영 및 첨부를 위해 필요합니다.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Pretendard-Regular.ttf</string>
+		<string>Pretendard-SemiBold.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -75,10 +82,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Pretendard-Regular.ttf</string>
-		<string>Pretendard-SemiBold.ttf</string>
-	</array>
 </dict>
 </plist>
