[FOOIY-92] 지도 클라이언트 아이디 변경

--- a/fooiy/android/app/src/main/AndroidManifest.xml
+++ b/fooiy/android/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
       <!-- 네이버 지도 -->
       <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="slg5tzx3gv" />
+            android:value="oingm1h0rz" />
       <!-- 네이버 지도 -->
     </application>
 </manifest>
