--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -55,7 +55,9 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0"
+    "react-test-renderer": "18.1.0",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3"
   },
   "jest": {
     "preset": "react-native"
