--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -36,7 +36,7 @@
     "react-native-image-crop-tools": "^1.6.2",
     "react-native-kakao-share-link": "^1.0.6",
     "react-native-modal": "^13.0.1",
-    "react-native-nmap": "^0.0.66",
+    "react-native-nmap": "github:fooiy-v2/react-native-naver-map",
     "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
