--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -16,6 +16,7 @@
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.1.0",
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
