--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -19,6 +19,7 @@
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/devtools": "^6.0.16",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
@@ -56,6 +57,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "react-native-flipper": "^0.177.0",
     "react-test-renderer": "18.1.0",
     "reactotron-react-native": "^5.0.3",
     "reactotron-redux": "^3.1.3"
