--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -32,6 +32,7 @@
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.2",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
