--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -19,8 +19,8 @@
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/material-top-tabs": "^6.5.2",
     "@react-navigation/devtools": "^6.0.16",
+    "@react-navigation/material-top-tabs": "^6.5.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.4",
+    "npm": "^9.4.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-device-info": "^10.3.0",
