--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -19,8 +19,8 @@
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/material-top-tabs": "^6.5.2",
     "@react-navigation/devtools": "^6.0.16",
+    "@react-navigation/material-top-tabs": "^6.5.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
@@ -39,6 +39,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-tools": "^1.6.2",
     "react-native-kakao-share-link": "^1.0.6",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-nmap": "github:fooiy-v2/react-native-naver-map",
     "react-native-pager-view": "^6.1.2",
