--- a/fooiy/android/build.gradle
+++ b/fooiy/android/build.gradle
@@ -2,10 +2,10 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "31.0.0"
+        buildToolsVersion = "33.0.0"
         minSdkVersion = 21
-        compileSdkVersion = 31
-        targetSdkVersion = 31
+        compileSdkVersion = 33
+        targetSdkVersion = 33
         kotlinVersion = '1.5.30'
 
         if (System.properties['os.arch'] == "aarch64") {
@@ -24,6 +24,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.2.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
+        classpath("com.google.gms:google-services:4.3.14")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
