--- a/fooiy/ios/Podfile
+++ b/fooiy/ios/Podfile
@@ -5,7 +5,11 @@ platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'fooiy' do
+  # use_frameworks!
   config = use_native_modules!
+
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
 
   # Flags change depending on the env values.
   flags = get_default_flags()
@@ -33,11 +37,27 @@ target 'fooiy' do
   pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
   pod 'Permission-LocationAccuracy', :path => "#{permissions_path}/LocationAccuracy"
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
+  pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
 
   target 'fooiyTests' do
     inherit! :complete
     # Pods for testing
   end
+
+  # # Convert all permission pods into static libraries
+  # pre_install do |installer|
+  #   Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
+
+  #   installer.pod_targets.each do |pod|
+  #     if pod.name.eql?('RNPermissions') || pod.name.start_with?('Permission-')
+  #       def pod.build_type;
+  #         # Uncomment the line corresponding to your CocoaPods version
+  #         Pod::BuildType.static_library # >= 1.9
+  #         # Pod::Target::BuildType.static_library # < 1.9
+  #       end
+  #     end
+  #   end
+  # end
 
   post_install do |installer|
     react_native_post_install(
