--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -18,6 +18,8 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.1.0",
     "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-native-firebase/app": "^17.0.0",
+    "@react-native-firebase/messaging": "^17.0.0",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/devtools": "^6.0.16",
@@ -54,6 +56,7 @@
     "react-native-svg": "^13.6.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.3.4",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vision-camera": "^2.15.2",
     "react-redux": "^8.0.5"
   },
