--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -34,6 +34,7 @@
     "npm": "^9.4.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-collapsible-tab-view": "^5.0.0-rc.13",
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.2",
