--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -35,6 +35,7 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.2",
     "react-native-dropdown-picker": "github:fooiy-v2/react-native-dropdown-picker",
