Permission 및 Naver Logo 위치 수정

--- a/fooiy/ios/fooiy/Info.plist
+++ b/fooiy/ios/fooiy/Info.plist
@@ -56,7 +56,7 @@
 	<string>카메라는 피드 등록을 위한 푸이 서비스 필수 정보로 활용됩니다.</string>
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
 	<dict>
-		<key>YOUR-PURPOSE-KEY</key>
+		<key>full-accuracy</key>
 		<string>앱이 사용자의 구체적인 위치를 사용하도록 허용해주세요.</string>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
