--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -18,8 +18,9 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.1.0",
     "@react-native-clipboard/clipboard": "^1.11.1",
-    "@react-native-firebase/app": "^17.0.0",
-    "@react-native-firebase/messaging": "^17.0.0",
+    "@react-native-firebase/analytics": "^17.1.0",
+    "@react-native-firebase/app": "^17.1.0",
+    "@react-native-firebase/messaging": "^17.1.0",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/devtools": "^6.0.16",
@@ -31,7 +32,6 @@
     "lodash": "^4.17.21",
     "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.4",
-    "npm": "^9.4.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -73,7 +73,8 @@
     "react-native-flipper": "^0.177.0",
     "react-test-renderer": "18.1.0",
     "reactotron-react-native": "^5.0.3",
-    "reactotron-redux": "^3.1.3"
+    "reactotron-redux": "^3.1.3",
+    "npm": "^9.4.0"
   },
   "jest": {
     "preset": "react-native"
