--- a/fooiy/android/gradle.properties
+++ b/fooiy/android/gradle.properties
@@ -40,3 +40,8 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 newArchEnabled=false
 
 android.disableAutomaticComponentCreation=true
+
+MYAPP_RELEASE_STORE_FILE=FooiyKeyStore
+MYAPP_RELEASE_KEY_ALIAS=fooiy
+MYAPP_RELEASE_STORE_PASSWORD=fooiy12159
+MYAPP_RELEASE_KEY_PASSWORD=fooiy12159
