--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -34,6 +34,7 @@
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-code-push": "^7.1.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.2",
@@ -69,10 +70,10 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "npm": "^9.4.0",
     "react-test-renderer": "18.1.0",
     "reactotron-react-native": "^5.0.3",
-    "reactotron-redux": "^3.1.3",
-    "npm": "^9.4.0"
+    "reactotron-redux": "^3.1.3"
   },
   "jest": {
     "preset": "react-native"
