--- a/fooiy/ios/fooiy/Info.plist
+++ b/fooiy/ios/fooiy/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CodePushDeploymentKey</key>
+	<string>$(CODEPUSH_KEY)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -37,16 +39,12 @@
 	<string>1</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-    	<string>itms-apps</string>
-	</array>
-	<key>KAKAO_APP_KEY</key>
-	<string>adeeb3a64a0ef610048dbcbe1010c07f</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
 		<string>kakaokompassauth</string>
 		<string>storykompassauth</string>
 		<string>kakaolink</string>
 	</array>
+	<key>KAKAO_APP_KEY</key>
+	<string>adeeb3a64a0ef610048dbcbe1010c07f</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NMFClientId</key>
