--- a/fooiy/ios/fooiy/Info.plist
+++ b/fooiy/ios/fooiy/Info.plist
@@ -49,6 +49,13 @@
 	<true/>
 	<key>NMFClientId</key>
 	<string>oingm1h0rz</string>
+	<!-- http -->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<!-- http -->
 	<key>NSCameraUsageDescription</key>
 	<string>카메라는 피드 등록을 위한 푸이 서비스 필수 정보로 활용됩니다.</string>
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
@@ -66,6 +73,7 @@
 		<string>Pretendard-SemiBold.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
+	
 	<array>
 		<string>fetch</string>
 		<string>remote-notification</string>
