--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -20,7 +20,7 @@
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@miblanchard/react-native-slider": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-camera-roll/camera-roll": "^5.1.0",
+    "@react-native-camera-roll/camera-roll": "github:fooiy-v2/react-native-cameraroll",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-firebase/analytics": "^17.1.0",
     "@react-native-firebase/app": "^17.1.0",
