--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
+    "@shopify/flash-list": "^1.4.1",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "lottie-ios": "3.4.0",
