--- a/fooiy/ios/fooiy/Info.plist
+++ b/fooiy/ios/fooiy/Info.plist
@@ -26,10 +26,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>kakaoadeeb3a64a0ef610048dbcbe1010c07f</string>
+			<string>kakao$(KAKAO_APP_KEY)</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>kakaoadeeb3a64a0ef610048dbcbe1010c07f</string>
+				<string>kakao$(KAKAO_APP_KEY)</string>
 			</array>
 		</dict>
 	</array>
@@ -38,7 +38,7 @@
 	<key>CodePushDeploymentKey</key>
 	<string>$(CODEPUSH_KEY)</string>
 	<key>KAKAO_APP_KEY</key>
-	<string>adeeb3a64a0ef610048dbcbe1010c07f</string>
+	<string>$(KAKAO_APP_KEY)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>kakaokompassauth</string>
@@ -48,7 +48,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NMFClientId</key>
-	<string>oingm1h0rz</string>
+	<string>$(NAVER_MAP_KEY)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
