--- a/fooiy/ios/fooiy.xcodeproj/xcshareddata/xcschemes/fooiy.xcscheme
+++ b/fooiy/ios/fooiy.xcodeproj/xcshareddata/xcschemes/fooiy.xcscheme
@@ -41,7 +41,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Staging"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
