--- a/fooiy/package.json
+++ b/fooiy/package.json
@@ -13,7 +13,8 @@
     "ios-staging": "react-native run-ios --configuration Staging",
     "android-staging": "react-native run-android --variant=releaseStaging",
     "code-push-staging-ios": "appcenter codepush release-react -a fooiyteam/Fooiy-IOS -d Staging",
-    "code-push-staging-android": "appcenter codepush release-react -a fooiyteam/Fooiy-AOS -d Staging"
+    "code-push-staging-android": "appcenter codepush release-react -a fooiyteam/Fooiy-AOS -d Staging",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
@@ -49,6 +50,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-tools": "^1.6.2",
+    "react-native-image-picker": "^5.1.0",
     "react-native-kakao-share-link": "^1.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
@@ -78,7 +80,8 @@
     "npm": "^9.4.0",
     "react-test-renderer": "18.1.0",
     "reactotron-react-native": "^5.0.3",
-    "reactotron-redux": "^3.1.3"
+    "reactotron-redux": "^3.1.3",
+    "patch-package": "^6.5.1"
   },
   "jest": {
     "preset": "react-native"
